--- a/index.css
+++ b/index.css
@@ -1,53 +1,85 @@
-footer{
+
+body{
+   	background-image: url("img/library.jpg");
+    background-repeat: no-repeat;
+ 	 
+    background-size: cover;
+    margin: 0px;
     display: flex;
-    margin-top: auto;
-    color: white;
-    background-color: rgb(64, 59, 59);
-    text-align: center;
-    font-size: 25px;
-    height: 50px;
-
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+	flex-direction: column;
+    position: relative;
 }
-
 header{
-    font-size: 25px;
-    height: 50px;
-    color: black;
-    background-color: rgb(201, 45, 45);
-}
-img{
-    width: 180px;
-    height: 180px;
-}
-
-
-main{
-    display: flex;
-    justify-content: center;
-}
-
-cards{
-    display: flex;
-    flex-wrap: wrap;
-    width: 830px;
-}
-
-card{
-    border: 3px solid black;
-    border-radius: 9px;
-    margin: 10px;
-    display: inline;
-    width: 180px;
-    background-color: rgb(138, 68, 68);
     display: flex;
     flex-direction: column;
-    text-align:center;
-    font-size: 20px;
+    background-color: rgba(0, 0, 0, 0.7);;
+    height: 120px;
+
 }
-nav a{
+
+#collections{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+main{
+    margin: 60px 300px;
+    display: flex;
+
+}
+
+.book{
+    width: 250px;
+}
+
+.card{
+    border: 2px solid rgba(255, 255, 255, 0.5);
+    border-radius: 5px;
+    margin: 25px 25px;
+}
+
+.name{
+    margin: 0px;
+    width: 250;
     color: white;
-    text-decoration-line: none;
+    font-size: 20px;
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+#searching{
+    display: inline-block;
+    display: flex;
+    justify-content: center;
+    height: 30px;
+}
+
+a:hover{
+    background-color: red;
+    
+}
+
+a{  
+    width: 200px;
+    background: grey;
+    text-align: center;
+    font-size: 30px;
+    color: white;
+    text-decoration:none;
+    border: 2px solid white;
+}
+
+nav{
+    margin: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+footer{
+    width: 100%;
+    position: absolute;
+    bottom: 0px;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.7);
+    text-align: center;
 }
