--- a/style.css
+++ b/style.css
@@ -85,7 +85,6 @@ main{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
 }
 .row{
     display: flex;
@@ -123,4 +122,33 @@ h1{
 .import:hover{
     width: 100%;
     transform: rotate(3deg);
+}
+
+.cards{
+    
+    margin-left: 210px;
+    margin-right: 210px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.card{
+    background-color:  #CF7500;
+    display: flex;
+    flex-direction: column;
+    margin: 25px;
+    width: 250px;
+    border: 3px solid black;
+    border-radius: 10px;
+    font-size: 25px;
+}
+
+.card img{
+    width: 250px;
+}
+
+.card p{
+    margin: 0px;
+    padding: 0px;
+    text-align: center;
 }
