--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Books Shop</title>
-    <link rel="stylesheet" type="text/css" href="style2.css">
+    <meta charset="utf-8">
+    <title>createPage</title>
+    <link rel="stylesheet" href="/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -20,19 +21,7 @@
         </nav>
     </header>
     <main>
-        <div id = "element">
-            <div class = "card">
-                <img src="img/book1.png">
-                <a class = "name">In Search of Lost Time</a>
-                <p class="price">10.99$</p>
-            </div>
-            <div>
-
-            </div>
-            <div>
-                
-            </div>
-        </div>  
+        {{body}}
     </main>
     <footer>
         <p>WebPage@gmail.com</p>
