--- a/style2.css
+++ b/style2.css
@@ -132,3 +132,20 @@ main{
     color: black;
     text-decoration: none;
 }
+
+#element{
+    display: flex;
+}
+
+ #descripton{
+    text-align: center;
+    font-size: 20px;
+    margin-top: 25px;
+    background-color: #CF7500;
+    border: 3px solid #1A1C20;
+    border-radius: 10px;
+    width: 800px;
+    height: 360px;
+}
+
+
