--- a/style4.css
+++ b/style4.css
@@ -71,6 +71,25 @@ li a:hover{
     transform: rotate(1deg) ;
 }
 
+button, input{
+    font-family: 'Itim', cursive;
+    font-size: 20px;
+    border: 2px solid black;
+}
+
+#Search, #filt{
+    margin-top: 25px;
+    font-size: 20px;
+    
+}
+
+#category{
+    border: 2px solid black;
+    font-family: 'Itim', cursive;
+    font-size: 20px;
+}
+
+
 
 footer{
     color: white;
