--- a/style.css
+++ b/style.css
@@ -5,18 +5,19 @@ body{
     margin: 0px;
     padding: 0px;
     height: 100vh;
-    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 
 header, footer{
     width: 100%;
-    min-height: 70px;
+    height: 70px;
 }   
 
 header{
     background-color: #F4F4F4;
-    box-shadow: 2px;
 }
 
 nav{
@@ -124,3 +125,37 @@ h1{
     transform: rotate(3deg);
 }
 
+@media screen and (max-width: 768px){
+    #logo{
+        width: 90px;
+    }
+
+    header{
+        height: 150px;
+    }
+
+    nav{
+        flex-direction: column;
+    }
+
+    .row{
+        flex-direction: column;
+    }
+    .price{
+        width: 250px;
+    }
+
+    ul{
+        
+    }
+
+    ul a{
+        font-size: 15px;
+    }
+}
+
+@media screen and (max-width: 410px){
+    ul a{
+        font-size: 9px;
+    }
+}    
