--- a/style3.css
+++ b/style3.css
@@ -4,7 +4,7 @@ body{
     background-color:#F0A500;
     margin: 0px;
     padding: 0px;
-    height: 100vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
