--- a/style4.css
+++ b/style4.css
@@ -3,7 +3,7 @@ body{
     background-color:#F0A500;
     margin: 0px;
     padding: 0px;
-    height: 100vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -17,7 +17,6 @@ header, footer{
 
 header{
     background-color: #F4F4F4;
-    box-shadow: 2px;
 }
 
 nav{
@@ -82,13 +81,6 @@ button, input{
     font-size: 20px;
     
 }
-
-#category{
-    border: 2px solid black;
-    font-family: 'Itim', cursive;
-    font-size: 20px;
-}
-
 
 
 footer{
@@ -167,4 +159,40 @@ footer{
 
 #adding a{
     height: 20%;
+}
+
+@media screen and (max-width: 1000px){
+    #logo{
+        width: 100px;
+        height: 50px;
+    }
+
+    header{
+        height: 300px;
+    }
+
+    nav{
+        flex-direction: column;
+        justify-content: start;
+
+    }
+
+    .card, .card img{
+        width: 200px;
+    }
+
+    .cards{
+        flex-direction: column;
+        margin-left: 10%;
+        margin-right: 10%;
+    }
+
+    #filt, #search{
+        margin: 25px;
+    }
+
+    ul{
+        margin: 0px;
+        padding: 0px;
+    }
 }
