--- a/style5.css
+++ b/style5.css
@@ -3,8 +3,7 @@ body{
     background-color:#F0A500;
     margin: 0px;
     padding: 0px;
-    height: 100vh;
-    position: relative;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -142,4 +141,35 @@ main{
 .name{
     color: black;
     text-decoration: none;
+}
+
+@media screen and (max-width: 1000px){
+    #logo{
+        width: 100px;
+        height: 50px;
+    }
+
+    header{
+        height: 300px;
+    }
+
+    nav{
+        flex-direction: column;
+        justify-content: start;
+
+    }
+
+    .card, .card img{
+        width: auto;
+    }
+
+    .cards{
+        flex-direction: column;
+        margin-left: 10%;
+        margin-right: 10%;
+    }
+
+    #filt, #search{
+        margin: 25px;
+    }
 }
